initial page setup done

--- a/pages/cources.html
+++ b/pages/cources.html
@@ -4,29 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
+    
     <header class="navbar">
         <div class="logo">
-            <a href="index.html"><img src="/images/logobg.png" alt="Your Logo"></a>
+            <a href="../index.html"><img src="/images/logobg.png" alt="Your Logo"></a>
         </div>
         <ul class="nav-list">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="/pages/about.html">About</a></li>
             <li><a href="/pages/cources.html">Courses</a></li>
             <li><a href="/pages/gallery.html">Gallery</a></li>
             <li><a href="/pages/contact.html">Contact</a></li>
         </ul>
-    </header>
-
-    <section class="hero">
-        <div class="hero-content">
-            <h1>Welcome to Our Website</h1>
-            <p>Your tagline goes here.</p>
-            <a href="#" class="btn">Learn More</a>
-        </div>
-    </section>
+    </header>    
 
     <section class="courses">
         <div class="courses-content">
@@ -45,9 +38,6 @@
                     <p>Price: $149</p>
                 </div>
                 <!-- Add more course descriptions here -->
-            </div>
-            <div class="see-more">
-                <a href="#" class="btn">See More</a>
             </div>
         </div>
     </section>
