--- a/pages/about.html
+++ b/pages/about.html
@@ -4,55 +4,109 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
-    <title>About Us - Your Website</title>
+    <title>About Us</title>
 </head>
 <body>
     <header class="navbar">
         <div class="logo">
-            <a href="../index.html"><img src="/images/logobg.png" alt="Your Logo"></a>
+            <a href="../index.html"><img src="../images/logobg.png" alt="Your Logo"></a>
         </div>
         <ul class="nav-list">
             <li><a href="../index.html">Home</a></li>
-            <li><a href="/pages/about.html">About</a></li>
-            <li><a href="/pages/cources.html">Courses</a></li>
-            <li><a href="/pages/gallery.html">Gallery</a></li>
-            <li><a href="/pages/contact.html">Contact</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="cources.html">Courses</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
-    </header>
+    </header>  
 
     <section class="about">
         <div class="about-content">
-            <h2>About Us</h2>
-            <p>We are a passionate team dedicated to creating amazing websites.</p>
-            <p>Our mission is to provide the best online experience for our clients.</p>
+            <h2>About LearnVerse: Empowering Excellence in Learning</h2>
+            <p>Welcome to LearnVerse, where the journey of learning meets innovation and inspiration. We are more than just an online learning platform; we are your partners in growth and success.</p>
+            <p>Our mission is to empower individuals from all walks of life to unleash their potential through accessible and high-quality education. With a diverse range of courses and a passionate team of educators, we aim to transform your learning experience into an exciting adventure.</p>
+            <h2>Our Core Beliefs:</h2>
+            <ul>
+                <li><strong>Excellence:</strong> We are committed to providing top-notch courses designed by experts in their fields. Our content is curated to equip you with real-world skills that matter.</li>
+                <li><strong>Innovation:</strong> Embracing the digital age, we offer an interactive and immersive learning environment. Engage with fellow learners, exchange ideas, and challenge your boundaries.</li>
+                <li><strong>Accessibility:</strong> Learning should be for everyone. That's why we provide affordable courses that fit your schedule, allowing you to learn at your own pace, anytime and anywhere.</li>
+                <li><strong>Community:</strong> Join a global community of learners, mentors, and achievers. Connect, collaborate, and grow together as you embark on your educational journey.</li>
+            </ul>
+            <p>Whether you're looking to acquire new skills, enhance your career prospects, or simply explore your passions, LearnVerse is your trusted companion on the road to personal and professional development.</p>
         </div>
-    </section>
-
+    </section>      
 
     <section class="teachers">
         <div class="teachers-content">
-            <h2>Our Teachers</h2>
+            <h2>Our Instructor</h2>
             <div class="teacher-grid">
                 <div class="teacher">
-                    <img src="teacher1.jpg" alt="Teacher 1">
-                    <h3>John Doe</h3>
-                    <p>Web Design Expert</p>
+                    <img src="../images/teacher-1.jpeg" alt="Teacher 1" class="teacher-img">
+                    <h3 class="teacher-name">John Doe</h3>
+                    <p class="teacher-title">Web Design Expert</p>
                 </div>
                 <div class="teacher">
-                    <img src="teacher2.jpg" alt="Teacher 2">
-                    <h3>Jane Smith</h3>
-                    <p>Front-end Developer</p>
+                    <img src="../images/teacher-2.jpeg" alt="Teacher 2" class="teacher-img">
+                    <h3 class="teacher-name">Jane Smith</h3>
+                    <p class="teacher-title">Front-end Developer</p>
                 </div>
-                <!-- Add more teacher profiles here -->
-            </div>
+                <div class="teacher">
+                    <img src="../images/teacher-3.jpeg" alt="Teacher 3" class="teacher-img">
+                    <h3 class="teacher-name">Michael Johnson</h3>
+                    <p class="teacher-title">Software Engineer</p>
+                </div>
+                <div class="teacher">
+                    <img src="../images/teacher-4.jpeg" alt="Teacher 4" class="teacher-img">
+                    <h3 class="teacher-name">Emily Adams</h3>
+                    <p class="teacher-title">UI/UX Designer</p>
+                </div>
+                <div class="teacher">
+                    <img src="../images/teacher-5.jpeg" alt="Teacher 5" class="teacher-img">
+                    <h3 class="teacher-name">Amelia Williams</h3>
+                    <p class="teacher-title">Data Scientist</p>
+                </div>
+            </div>            
         </div>
     </section>
-    
+
+    <section class="teachers">
+        <div class="teachers-content">
+            <h2>Our Management</h2>
+            <div class="teacher-grid">
+                <div class="teacher">
+                    <img src="../images/team-1.jpeg" alt="Management 1" class="teacher-img">
+                    <h3>John Doe</h3>
+                    <p>CEO</p>
+                </div>
+                <div class="teacher">
+                    <img src="../images/team-2.jpeg" alt="Management 2" class="teacher-img">
+                    <h3>Elizabeth Smith</h3>
+                    <p>COO</p>
+                </div>
+                <div class="teacher">
+                    <img src="../images/team-3.jpeg" alt="Management 3" class="teacher-img">
+                    <h3>Michael Johnson</h3>
+                    <p>CTO</p>
+                </div>
+                <div class="teacher">
+                    <img src="../images/team-4.jpeg" alt="Management 4" class="teacher-img">
+                    <h3>Emily Adams</h3>
+                    <p>Creative Director</p>
+                </div>
+                <div class="teacher">
+                    <img src="../images/team-5.jpeg" alt="Management 5" class="teacher-img">
+                    <h3>Alex Williams</h3>
+                    <p>Chief Data Officer</p>
+                </div>
+            </div>            
+        </div>
+    </section>
+
     <footer class="footer">
         <div class="social-links">
-            <a href="#" target="_blank" rel="noopener noreferrer"><img src="facebook-icon.png" alt="Facebook"></a>
-            <a href="#" target="_blank" rel="noopener noreferrer"><img src="twitter-icon.png" alt="Twitter"></a>
-            <a href="#" target="_blank" rel="noopener noreferrer"><img src="instagram-icon.png" alt="Instagram"></a>
+            <a href="#" target="_blank" rel="noopener noreferrer"><img src="../images/facebook.png" alt="Facebook"></a>
+            <a href="#" target="_blank" rel="noopener noreferrer"><img src="../images/twitter.png" alt="Twitter"></a>
+            <a href="#" target="_blank" rel="noopener noreferrer"><img src="../images/instagram.png" alt="Instagram"></a>
         </div>
         <p>&copy; 2023 Your Website. All rights reserved.</p>
     </footer>
