--- a/pages/cources.html
+++ b/pages/cources.html
@@ -3,50 +3,100 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Courses</title>
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     
     <header class="navbar">
         <div class="logo">
-            <a href="../index.html"><img src="/images/logobg.png" alt="Your Logo"></a>
+            <a href="../index.html"><img src="../images/logobg.png" alt="Your Logo"></a>
         </div>
         <ul class="nav-list">
             <li><a href="../index.html">Home</a></li>
-            <li><a href="/pages/about.html">About</a></li>
-            <li><a href="/pages/cources.html">Courses</a></li>
-            <li><a href="/pages/gallery.html">Gallery</a></li>
-            <li><a href="/pages/contact.html">Contact</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="cources.html">Courses</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
-    </header>    
+    </header>  
 
     <section class="courses">
         <div class="courses-content">
             <h2>Our Courses</h2>
             <div class="course-grid">
                 <div class="course">
-                    <img src="course1.jpg" alt="Course 1">
-                    <h3>Web Development</h3>
-                    <p>Learn to build modern websites. Includes HTML, CSS, and JavaScript.</p>
-                    <p>Price: $199</p>
+                    <img src="../images/course-1.jpg" alt="Course 1" class="course-img">
+                    <h3 class="course-title">Web Development</h3>
+                    <p class="course-description">Learn to build modern websites. Includes HTML, CSS, and JavaScript.</p>
+                    <p class="course-price">$199</p>
+                    <button class="enroll-button">Enroll</button>
                 </div>
                 <div class="course">
-                    <img src="course2.jpg" alt="Course 2">
-                    <h3>Graphic Design</h3>
-                    <p>Unlock your creativity with digital design tools and techniques.</p>
-                    <p>Price: $149</p>
+                    <img src="../images/IELTS.jpg" alt="IELTS Course" class="course-img">
+                    <h3 class="course-title">IELTS Preparation</h3>
+                    <p class="course-description">Prepare for the IELTS exam and improve your English language skills.</p>
+                    <p class="course-price">$299</p>
+                    <button class="enroll-button">Enroll</button>
                 </div>
-                <!-- Add more course descriptions here -->
-            </div>
+                <div class="course">
+                    <img src="../images/course-2.jpg" alt="Course 2" class="course-img">
+                    <h3 class="course-title">Graphic Design</h3>
+                    <p class="course-description">Unlock your creativity with digital design tools and techniques.</p>
+                    <p class="course-price">$149</p>
+                    <button class="enroll-button">Enroll</button>
+                </div>
+                <div class="course">
+                    <img src="../images/course-3.jpg" alt="Course 3" class="course-img">
+                    <h3 class="course-title">Data Science</h3>
+                    <p class="course-description">Explore the world of data and gain insights through analysis and visualization.</p>
+                    <p class="course-price">$249</p>
+                    <button class="enroll-button">Enroll</button>
+                </div>
+                <div class="course">
+                    <img src="../images/course-4.jpg" alt="Course 4" class="course-img">
+                    <h3 class="course-title">Mobile App Development</h3>
+                    <p class="course-description">Build interactive mobile applications for iOS and Android platforms.</p>
+                    <p class="course-price">$219</p>
+                    <button class="enroll-button">Enroll</button>
+                </div>
+                <div class="course">
+                    <img src="../images/course-5.jpg" alt="Course 5" class="course-img">
+                    <h3 class="course-title">Photography Basics</h3>
+                    <p class="course-description">Learn the fundamentals of photography, from composition to editing.</p>
+                    <p class="course-price">$129</p>
+                    <button class="enroll-button">Enroll</button>
+                </div>
+                <div class="course">
+                    <img src="../images/course-6.jpg" alt="Course 6" class="course-img">
+                    <h3 class="course-title">Marketing Strategies</h3>
+                    <p class="course-description">Discover effective marketing techniques to promote products and services.</p>
+                    <p class="course-price">$179</p>
+                    <button class="enroll-button">Enroll</button>
+                </div>
+                <div class="course">
+                    <img src="../images/course-7.jpg" alt="Course 7" class="course-img">
+                    <h3 class="course-title">Python Programming</h3>
+                    <p class="course-description">Master the Python language and develop versatile applications.</p>
+                    <p class="course-price">$189</p>
+                    <button class="enroll-button">Enroll</button>
+                </div>
+                <div class="course">
+                    <img src="../images/course-8.jpg" alt="Course 8" class="course-img">
+                    <h3 class="course-title">Artificial Intelligence</h3>
+                    <p class="course-description">Explore the realm of AI and its applications in various fields.</p>
+                    <p class="course-price">$299</p>
+                    <button class="enroll-button">Enroll</button>
+                </div>
+            </div>            
         </div>
     </section>
 
     <footer class="footer">
         <div class="social-links">
-            <a href="#" target="_blank" rel="noopener noreferrer"><img src="facebook-icon.png" alt="Facebook"></a>
-            <a href="#" target="_blank" rel="noopener noreferrer"><img src="twitter-icon.png" alt="Twitter"></a>
-            <a href="#" target="_blank" rel="noopener noreferrer"><img src="instagram-icon.png" alt="Instagram"></a>
+            <a href="#" target="_blank" rel="noopener noreferrer"><img src="../images/facebook.png" alt="Facebook"></a>
+            <a href="#" target="_blank" rel="noopener noreferrer"><img src="../images/twitter.png" alt="Twitter"></a>
+            <a href="#" target="_blank" rel="noopener noreferrer"><img src="../images/instagram.png" alt="Instagram"></a>
         </div>
         <p>&copy; 2023 Your Website. All rights reserved.</p>
     </footer>
