--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -3,41 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Gallary</title>
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
     <header class="navbar">
         <div class="logo">
-            <a href="../index.html"><img src="/images/logobg.png" alt="Your Logo"></a>
+            <a href="../index.html"><img src="../images/logobg.png" alt="Your Logo"></a>
         </div>
         <ul class="nav-list">
             <li><a href="../index.html">Home</a></li>
-            <li><a href="/pages/about.html">About</a></li>
-            <li><a href="/pages/cources.html">Courses</a></li>
-            <li><a href="/pages/gallery.html">Gallery</a></li>
-            <li><a href="/pages/contact.html">Contact</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="cources.html">Courses</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
-    </header>
+    </header>     
 
     <section class="gallery">
         <div class="gallery-content">
             <h2>Gallery</h2>
             <div class="gallery-grid">
-                <img src="image1.jpg" alt="Image 1">
-                <img src="image2.jpg" alt="Image 2">
-                <img src="image3.jpg" alt="Image 3">
-                <!-- Add more gallery images here -->
+                <img src="../images/gallary-1.jpg" alt="Image 1">
+                <img src="../images/gallary-2.jpg" alt="Image 2">
+                <img src="../images/gallary-3.jpg" alt="Image 3">
+                <img src="../images/gallary-4.jpg" alt="Image 4">
+                <img src="../images/gallary-5.jpg" alt="Image 5">
+                <img src="../images/gallary-6.jpg" alt="Image 6">
+                <img src="../images/gallary-7.jpg" alt="Image 7">
+                <img src="../images/gallary-8.jpg" alt="Image 8">
+                <img src="../images/gallary-9.jpg" alt="Image 9">
+                <img src="../images/gallary-10.jpg" alt="Image 10">
+                <img src="../images/gallary-11.jpg" alt="Image 11">
+                <img src="../images/gallary-12.jpg" alt="Image 12">
+                <img src="../images/gallary-13.jpg" alt="Image 13">
+                <img src="../images/gallary-14.jpg" alt="Image 14">
+                <img src="../images/gallary-15.jpg" alt="Image 15">
+                <img src="../images/gallary-16.jpg" alt="Image 16">
+                <img src="../images/gallary-17.jpg" alt="Image 17">
+                <img src="../images/gallary-18.jpg" alt="Image 18">
+                <img src="../images/gallary-19.jpg" alt="Image 19">
+                <img src="../images/gallary-20.jpg" alt="Image 20">
+                <img src="../images/gallary-21.jpg" alt="Image 21">
+                <img src="../images/gallary-22.jpg" alt="Image 22">
+                <img src="../images/gallary-23.jpg" alt="Image 23">
+                <img src="../images/gallary-24.jpg" alt="Image 24">
+                <img src="../images/gallary-25.jpg" alt="Image 25">
+                <img src="../images/gallary-26.jpg" alt="Image 26">
+                <img src="../images/gallary-27.jpg" alt="Image 27">
+                <img src="../images/gallary-28.jpg" alt="Image 28">
+                <img src="../images/gallary-29.jpg" alt="Image 29">              
             </div>
         </div>
     </section>
 
     <footer class="footer">
         <div class="social-links">
-            <a href="#" target="_blank" rel="noopener noreferrer"><img src="facebook-icon.png" alt="Facebook"></a>
-            <a href="#" target="_blank" rel="noopener noreferrer"><img src="twitter-icon.png" alt="Twitter"></a>
-            <a href="#" target="_blank" rel="noopener noreferrer"><img src="instagram-icon.png" alt="Instagram"></a>
+            <a href="#" target="_blank" rel="noopener noreferrer"><img src="../images/facebook.png" alt="Facebook"></a>
+            <a href="#" target="_blank" rel="noopener noreferrer"><img src="../images/twitter.png" alt="Twitter"></a>
+            <a href="#" target="_blank" rel="noopener noreferrer"><img src="../images/instagram.png" alt="Instagram"></a>
         </div>
         <p>&copy; 2023 Your Website. All rights reserved.</p>
     </footer>
