--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,34 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
-    <title>Contact Us - Your Website</title>
+    <title>Contact Us</title>
 </head>
 <body>
     <header class="navbar">
         <div class="logo">
-            <a href="../index.html"><img src="/images/logobg.png" alt="Your Logo"></a>
+            <a href="../index.html"><img src="../images/logobg.png" alt="Your Logo"></a>
         </div>
         <ul class="nav-list">
             <li><a href="../index.html">Home</a></li>
-            <li><a href="/pages/about.html">About</a></li>
-            <li><a href="/pages/cources.html">Courses</a></li>
-            <li><a href="/pages/gallery.html">Gallery</a></li>
-            <li><a href="/pages/contact.html">Contact</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="cources.html">Courses</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
-    </header>
+    </header>    
 
-    <section class="contact">
-        <div class="contact-content">
-            <h2>Contact Us</h2>
-            <p>If you have any questions or inquiries, feel free to get in touch with us.</p>
-            <form action="#" method="post">
-                <input type="text" name="name" placeholder="Your Name">
-                <input type="email" name="email" placeholder="Your Email">
-                <textarea name="message" placeholder="Your Message"></textarea>
-                <button type="submit" class="btn">Send Message</button>
-            </form>
+    <section class="contact-section">
+        <div class="contact-container">
+            <div class="map-container">
+                <h2>Visit Us</h2>
+                <p><strong>Phone:</strong> +1 (647) 555-5678</p>
+                <p><strong>Email:</strong> example12@outlook.com</p>
+                <div class="map">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d184552.6741179721!2d-79.54286909688865!3d43.71812279890088!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d4cb90d7c63ba5%3A0x323555502ab4c477!2sToronto%2C%20ON%2C%20Canada!5e0!3m2!1sen!2sbd!4v1691849324230!5m2!1sen!2sbd"  style="border:0; width: 100%; height: 266px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
+            <div class="contact-form">
+                <h2>Contact Us</h2>
+                <form action="submit_form.php" method="POST">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" required>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required>
+                    <label for="message">Message:</label>
+                    <textarea id="message" name="message" rows="4" required></textarea>
+                    <button type="submit" class="btn">Send</button>
+                </form>
+            </div>
         </div>
     </section>
+
+    <footer class="footer">
+        <div class="social-links">
+            <a href="#" target="_blank" rel="noopener noreferrer"><img src="../images/facebook.png" alt="Facebook"></a>
+            <a href="#" target="_blank" rel="noopener noreferrer"><img src="../images/twitter.png" alt="Twitter"></a>
+            <a href="#" target="_blank" rel="noopener noreferrer"><img src="../images/instagram.png" alt="Instagram"></a>
+        </div>
+        <p>&copy; 2023 Your Website. All rights reserved.</p>
+    </footer>
     
 </body>
 </html>
