--- a/pages/about.html
+++ b/pages/about.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
     <title>About Us</title>
 </head>
@@ -39,7 +37,7 @@
     <section class="teachers">
         <div class="teachers-content">
             <h2>Our Instructor</h2>
-            <div class="teacher-grid">
+            <div class="teacher-box">
                 <div class="teacher">
                     <img src="../images/teacher-1.jpeg" alt="Teacher 1" class="teacher-img">
                     <h3 class="teacher-name">John Doe</h3>
@@ -48,7 +46,7 @@
                 <div class="teacher">
                     <img src="../images/teacher-2.jpeg" alt="Teacher 2" class="teacher-img">
                     <h3 class="teacher-name">Jane Smith</h3>
-                    <p class="teacher-title">Front-end Developer</p>
+                    <p class="teacher-title">English Teacher</p>
                 </div>
                 <div class="teacher">
                     <img src="../images/teacher-3.jpeg" alt="Teacher 3" class="teacher-img">
@@ -72,7 +70,7 @@
     <section class="teachers">
         <div class="teachers-content">
             <h2>Our Management</h2>
-            <div class="teacher-grid">
+            <div class="teacher-box">
                 <div class="teacher">
                     <img src="../images/team-1.jpeg" alt="Management 1" class="teacher-img">
                     <h3>John Doe</h3>
@@ -104,11 +102,11 @@
 
     <footer class="footer">
         <div class="social-links">
-            <a href="#" target="_blank" rel="noopener noreferrer"><img src="../images/facebook.png" alt="Facebook"></a>
-            <a href="#" target="_blank" rel="noopener noreferrer"><img src="../images/twitter.png" alt="Twitter"></a>
-            <a href="#" target="_blank" rel="noopener noreferrer"><img src="../images/instagram.png" alt="Instagram"></a>
+            <a href="#" target="_blank" ><img src="../images/facebook.png" alt="Facebook"></a>
+            <a href="#" target="_blank" ><img src="../images/twitter.png" alt="Twitter"></a>
+            <a href="#" target="_blank" ><img src="../images/instagram.png" alt="Instagram"></a>
         </div>
-        <p>&copy; 2023 Your Website. All rights reserved.</p>
+        <p>&copy; 2023 LearnVerse. All rights reserved.</p>
     </footer>
 
 </body>
