--- a/pages/cources.html
+++ b/pages/cources.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Courses</title>
     <link rel="stylesheet" href="../style.css">
 </head>
@@ -21,10 +19,63 @@
         </ul>
     </header>  
 
+    <section class="schedule-board">
+        <div class="table-container">
+            <h2>Schedule Board</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Time</th>
+                        <th>Monday</th>
+                        <th>Tuesday</th>
+                        <th>Wednesday</th>
+                        <th>Thursday</th>
+                        <th>Friday</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>09:00 AM</td>
+                        <td>Course A</td>
+                        <td>Course B</td>
+                        <td>Course C</td>
+                        <td>Course D</td>
+                        <td>Course E</td>
+                    </tr>
+                    <tr>
+                        <td>10:00 AM</td>
+                        <td>Course F</td>
+                        <td>Course G</td>
+                        <td>Course H</td>
+                        <td>Course I</td>
+                        <td>Course J</td>
+                    </tr>
+                    <tr>
+                        <td>11:00 AM</td>
+                        <td>Course K</td>
+                        <td>Course L</td>
+                        <td>Course M</td>
+                        <td>Course N</td>
+                        <td>Course O</td>
+                    </tr>
+                    <tr>
+                        <td>12:00 PM</td>
+                        <td>Course P</td>
+                        <td>Course Q</td>
+                        <td>Course R</td>
+                        <td>Course S</td>
+                        <td>Course T</td>
+                    </tr>
+                    <!-- Add more rows as needed -->
+                </tbody>
+            </table>
+        </div>
+    </section>
+
     <section class="courses">
         <div class="courses-content">
             <h2>Our Courses</h2>
-            <div class="course-grid">
+            <div class="course-box">
                 <div class="course">
                     <img src="../images/course-1.jpg" alt="Course 1" class="course-img">
                     <h3 class="course-title">Web Development</h3>
@@ -94,11 +145,11 @@
 
     <footer class="footer">
         <div class="social-links">
-            <a href="#" target="_blank" rel="noopener noreferrer"><img src="../images/facebook.png" alt="Facebook"></a>
-            <a href="#" target="_blank" rel="noopener noreferrer"><img src="../images/twitter.png" alt="Twitter"></a>
-            <a href="#" target="_blank" rel="noopener noreferrer"><img src="../images/instagram.png" alt="Instagram"></a>
+            <a href="#" target="_blank" ><img src="../images/facebook.png" alt="Facebook"></a>
+            <a href="#" target="_blank" ><img src="../images/twitter.png" alt="Twitter"></a>
+            <a href="#" target="_blank" ><img src="../images/instagram.png" alt="Instagram"></a>
         </div>
-        <p>&copy; 2023 Your Website. All rights reserved.</p>
+        <p>&copy; 2023 LearnVerse. All rights reserved.</p>
     </footer>
 
 </body>
