--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
     <title>Contact Us</title>
 </head>
@@ -25,14 +23,14 @@
             <div class="map-container">
                 <h2>Visit Us</h2>
                 <p><strong>Phone:</strong> +1 (647) 555-5678</p>
-                <p><strong>Email:</strong> example12@outlook.com</p>
+                <p><strong>Email:</strong> learnverse2121112@outlook.com</p>
                 <div class="map">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d184552.6741179721!2d-79.54286909688865!3d43.71812279890088!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d4cb90d7c63ba5%3A0x323555502ab4c477!2sToronto%2C%20ON%2C%20Canada!5e0!3m2!1sen!2sbd!4v1691849324230!5m2!1sen!2sbd"  style="border:0; width: 100%; height: 266px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
             <div class="contact-form">
                 <h2>Contact Us</h2>
-                <form action="submit_form.php" method="POST">
+                <form>
                     <label for="name">Name:</label>
                     <input type="text" id="name" name="name" required>
                     <label for="email">Email:</label>
@@ -47,11 +45,11 @@
 
     <footer class="footer">
         <div class="social-links">
-            <a href="#" target="_blank" rel="noopener noreferrer"><img src="../images/facebook.png" alt="Facebook"></a>
-            <a href="#" target="_blank" rel="noopener noreferrer"><img src="../images/twitter.png" alt="Twitter"></a>
-            <a href="#" target="_blank" rel="noopener noreferrer"><img src="../images/instagram.png" alt="Instagram"></a>
+            <a href="#" target="_blank" ><img src="../images/facebook.png" alt="Facebook"></a>
+            <a href="#" target="_blank" ><img src="../images/twitter.png" alt="Twitter"></a>
+            <a href="#" target="_blank" ><img src="../images/instagram.png" alt="Instagram"></a>
         </div>
-        <p>&copy; 2023 Your Website. All rights reserved.</p>
+        <p>&copy; 2023 LearnVerse. All rights reserved.</p>
     </footer>
     
 </body>
