--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallary</title>
     <link rel="stylesheet" href="../style.css">
 </head>
@@ -24,47 +22,29 @@
     <section class="gallery">
         <div class="gallery-content">
             <h2>Gallery</h2>
-            <div class="gallery-grid">
-                <img src="../images/gallary-1.jpg" alt="Image 1">
-                <img src="../images/gallary-2.jpg" alt="Image 2">
-                <img src="../images/gallary-3.jpg" alt="Image 3">
-                <img src="../images/gallary-4.jpg" alt="Image 4">
-                <img src="../images/gallary-5.jpg" alt="Image 5">
-                <img src="../images/gallary-6.jpg" alt="Image 6">
-                <img src="../images/gallary-7.jpg" alt="Image 7">
-                <img src="../images/gallary-8.jpg" alt="Image 8">
-                <img src="../images/gallary-9.jpg" alt="Image 9">
-                <img src="../images/gallary-10.jpg" alt="Image 10">
-                <img src="../images/gallary-11.jpg" alt="Image 11">
-                <img src="../images/gallary-12.jpg" alt="Image 12">
-                <img src="../images/gallary-13.jpg" alt="Image 13">
-                <img src="../images/gallary-14.jpg" alt="Image 14">
-                <img src="../images/gallary-15.jpg" alt="Image 15">
-                <img src="../images/gallary-16.jpg" alt="Image 16">
-                <img src="../images/gallary-17.jpg" alt="Image 17">
-                <img src="../images/gallary-18.jpg" alt="Image 18">
-                <img src="../images/gallary-19.jpg" alt="Image 19">
-                <img src="../images/gallary-20.jpg" alt="Image 20">
-                <img src="../images/gallary-21.jpg" alt="Image 21">
-                <img src="../images/gallary-22.jpg" alt="Image 22">
-                <img src="../images/gallary-23.jpg" alt="Image 23">
-                <img src="../images/gallary-24.jpg" alt="Image 24">
-                <img src="../images/gallary-25.jpg" alt="Image 25">
-                <img src="../images/gallary-26.jpg" alt="Image 26">
-                <img src="../images/gallary-27.jpg" alt="Image 27">
-                <img src="../images/gallary-28.jpg" alt="Image 28">
-                <img src="../images/gallary-29.jpg" alt="Image 29">              
+            <div class="gallery-box">
+                <img src="../images/course-1.jpg" alt="Image 1">
+                <img src="../images/course-2.jpg" alt="Image 2">
+                <img src="../images/course-3.jpg" alt="Image 3">
+                <img src="../images/course-4.jpg" alt="Image 4">
+                <img src="../images/course-5.jpg" alt="Image 5">
+                <img src="../images/course-6.jpg" alt="Image 6">
+                <img src="../images/course-7.jpg" alt="Image 7">
+                <img src="../images/course-8.jpg" alt="Image 8">
+                <img src="../images/IELTS.jpg" alt="Image 9">           
+                <img src="../images/IELTS-2.jpg" alt="Image 10">           
+                <img src="../images/IELTS-3.jpg" alt="Image 11">           
             </div>
         </div>
     </section>
 
     <footer class="footer">
         <div class="social-links">
-            <a href="#" target="_blank" rel="noopener noreferrer"><img src="../images/facebook.png" alt="Facebook"></a>
-            <a href="#" target="_blank" rel="noopener noreferrer"><img src="../images/twitter.png" alt="Twitter"></a>
-            <a href="#" target="_blank" rel="noopener noreferrer"><img src="../images/instagram.png" alt="Instagram"></a>
+            <a href="#" target="_blank" ><img src="../images/facebook.png" alt="Facebook"></a>
+            <a href="#" target="_blank" ><img src="../images/twitter.png" alt="Twitter"></a>
+            <a href="#" target="_blank" ><img src="../images/instagram.png" alt="Instagram"></a>
         </div>
-        <p>&copy; 2023 Your Website. All rights reserved.</p>
+        <p>&copy; 2023 LearnVerse. All rights reserved.</p>
     </footer>
 
 </body>
